testsuite/tests/jst-modular-extensions/user_error5.compilers.reference
File "user_error5.ml", line 19, characters 25-40:
19 | let _unnamed_extension = [%extension] ();;
                              ^^^^^^^^^^^^^^^
Error: Cannot have an extension node named [%extension]
